[gd_scene load_steps=6 format=3 uid="uid://bgjquj6c3t8v"]

[ext_resource type="Script" path="res://lighthouse.gd" id="1_j0xlo"]
[ext_resource type="Texture2D" uid="uid://0vyvqhk03lud" path="res://images/lighthouse.png" id="1_uopoq"]
[ext_resource type="PackedScene" uid="uid://bncfekbrku1uf" path="res://light_beam.tscn" id="3_7wmhv"]
[ext_resource type="PackedScene" uid="uid://b4r4u3tswv6lk" path="res://bullet.tscn" id="3_72jw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5is8"]
size = Vector2(40, 128)

[node name="Lighthouse" type="StaticBody2D" groups=["lighthouse"]]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_j0xlo")
light_beam_scene = ExtResource("3_7wmhv")
bullet_scene = ExtResource("3_72jw5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_uopoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_r5is8")

[node name="RotationPoint" type="Node2D" parent="."]

[node name="LightBeam" parent="RotationPoint" instance=ExtResource("3_7wmhv")]
position = Vector2(250, 0)
collision_mask = 6

[node name="RotationChangeMid" type="Timer" parent="RotationPoint"]
wait_time = 0.3
one_shot = true

[node name="RotationChangeFinish" type="Timer" parent="RotationPoint"]
wait_time = 0.3
one_shot = true

[node name="BulletCooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="BulletsDelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="RotationPoint/RotationChangeMid" to="." method="_on_rotation_change_mid_timeout"]
[connection signal="timeout" from="RotationPoint/RotationChangeFinish" to="." method="_on_rotation_change_finish_timeout"]
[connection signal="timeout" from="BulletCooldownTimer" to="." method="_on_bullet_cooldown_timer_timeout"]
